force-app/main/default/objects/ssot__AssessmentQuestion__dlm/fields/ssot__ActiveAssessmentQuestionVersionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActiveAssessmentQuestionVersionId__c</fullName>
    <label>Active Assessment Question Version</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActiveAssessmentQuestionVersionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>