force-app/main/default/objects/ssot__AssessmentQuestion__dlm/fields/ssot__AssessmentQuestionCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentQuestionCategory__c</fullName>
    <label>Assessment Question Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentQuestionCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>