force-app/main/default/objects/ssot__AssessmentQuestion__dlm/fields/ssot__RelatedQuestionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedQuestionId__c</fullName>
    <label>Related Question</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedQuestionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>